# foundation-model-stack

./: .gitignore  .python-version  Makefile  README.md  RELEASING.md  benchmark_speculative_inference.py  eval_discrete.py  eval_discrete_13.py  eval_discrete_cc.py  eval_recur.py  eval_recur_13.py  eval_recur_cc.py  hf-requirements.txt  makefile  pyproject.toml  requirements.txt  setup.py  speculative-decode-demo-7b-chat.ipynb  speculative_decoding_eval-tree-discrete.ipynb  speculative_decoding_eval-tree-recur-chat.ipynb  speculative_decoding_eval-tree-recur.ipynb  speculative_decoding_eval-tree.ipynb  speculative_decoding_eval-trigram.ipynb  speculative_decoding_eval.ipynb  speculative_decoding_sandbox.ipynb  speculative_decoding_train.ipynb  test-requirements.txt  test_distributed_cluster.py  test_distributed_cluster.sh  tst.py  twitter_complaints.json
.ipynb_checkpoints/: speculative_decoding_eval-checkpoint.ipynb  speculative_decoding_eval-tree-checkpoint.ipynb
build_scripts/: deploy.sh
docs/: enable_vision_only_load.md
examples/: benchmark_inference.py  inference.py
final_project/: Makefile  README.md  profile_memory_default.csv  profile_memory_paged.csv  report.tex
fms/: __init__.py  _version.py  optimizers.py  py.typed
ibm_fms.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: granite_speech_inference.ipynb  hf_adapted_inference.ipynb  hf_adapted_llama_inference.ipynb  hf_llama_generation_example.ipynb
scripts/: README.md  benchmark_attention_runtime.py  benchmark_inference.py  benchmark_profile_memory.py  benchmark_profile_throughput.py  benchmark_speculative_inference.py  chat.py  cudagraph_repro1.py  eval_harness.py  export_repro.py  generate_with_loss.py  get_training_graph.py  hf_compile_example.py  hf_example.py  hf_llama_generation_example.ipynb  inference.py  inference_fp8.py  inference_granite.py  inference_tgis.py  llama_conversion.py  model_export.py  roberta_loss_example.py  run_ministral.py  run_ministral_3b.py  runtime.py  speculative_inference.py  tgis_benchmark.py  train.py  train_bert_sen.sh  train_causal.py  train_classification.py  train_llama.py  train_specu_recur.py  (+5 more)
(+425 files in other folders)
